--- a/src/Components/MenuElement/Duties/UpdateAndAddPersonnel.css
+++ b/src/Components/MenuElement/Duties/UpdateAndAddPersonnel.css
@@ -16,8 +16,7 @@
     background: var(--color-teal-20);
     padding: 2rem;
     border-radius: 16px;
-    width: 700px;
-    max-width: 100%;
+    min-width: 50%;
     box-shadow: 0 8px 30px rgba(0,0,0,0.2);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--color-teal-1);
@@ -112,6 +111,18 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
+    position: relative;
+}
+
+.eye-icon{
+    position: absolute;
+    top: 35px;
+    right: 12px;
+    color: var(--color-teal-6);
+}
+
+.err-of-personnal-fields{
+    color: red;
 }
 
 @media (max-width: 900px) {
