--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -141,3 +141,51 @@
   font-weight: 600;
   border-bottom: 1px solid var(--color-teal-1);
 }
+
+
+.ns-connect-box {
+  display: flex;
+  gap: 10px;
+}
+
+.ns-connect-inform {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 10px;
+  background-color: var(--color-teal-10);
+  border: 1px solid var(--color-teal-12);
+  border-radius: 10px;
+}
+
+.ns-connect-text {
+  color: white;
+}
+
+.connect-icon {
+  font-weight: 800;
+  font-size: 1rem;
+}
+
+.ci-1 {
+  color: #169e4a;
+}
+
+.ci-2 {
+  color: red;
+}
+
+.ns-connect-btn {
+  border-radius: 10px;
+  color: white;
+  border: 1px solid var(--color-teal-12);
+  padding: 10px 15px;
+  background-color: var(--color-teal-6);
+  outline: none;
+  transition: .5s;
+  cursor: pointer;
+}
+
+.ns-connect-btn:hover{
+  background-color: var(--color-teal-8);
+}
