--- a/src/Components/MenuElement/Duties/ChangePassword.css
+++ b/src/Components/MenuElement/Duties/ChangePassword.css
@@ -24,7 +24,7 @@
     font-size: 20px;
 }
 
-.cp-wrapper label {
+.cp-wrapper .cp-label {
     display: flex;
     flex-direction: column;
     gap: 6px;
