--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -99,6 +99,10 @@
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu-list {
@@ -108,10 +112,6 @@
   display: flex;
   gap: 5px;
   width: 100%;
-}
-
-.menu-list-child {
-  margin-bottom: 10px;
 }
 
 .menu-list-child-link {
@@ -134,6 +134,10 @@
 .menu-icon {
   font-size: 18px;
   color: var(--color-teal-10);
+}
+
+.admin-menu-button {
+  cursor: pointer;
 }
 
 .menu-list-child-text {
@@ -161,6 +165,7 @@
   background-color: var(--color-teal-10);
   border: 1px solid var(--color-teal-12);
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .ns-connect-text {
