--- a/src/Components/Loggins/Loggins.css
+++ b/src/Components/Loggins/Loggins.css
@@ -14,7 +14,7 @@
 .table-log-header,
 .table-log-row {
     display: grid;
-    grid-template-columns: 50px repeat(7, 1fr) 70px;
+    grid-template-columns: 50px 1fr 90px repeat(6, 1fr) 70px;
     padding: 12px;
 }
 
