--- a/src/Components/MenuElement/ClientOpe.css
+++ b/src/Components/MenuElement/ClientOpe.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 10000;
+    z-index: 100000;
 }
 
 .client-ope-container h2 {
@@ -48,7 +48,7 @@
 
 .cl-row {
     display: grid;
-    grid-template-columns: .6fr 1.1fr 1fr 1.2fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 40px 1.1fr .5fr .7fr .7fr 1fr 1fr 1.1fr 1.1fr;
     padding: 12px 16px;
     border-bottom: 1px solid var(--color-teal-15);
     color: var(--color-teal-3);
