--- a/src/Components/MenuElement/CompletedTasks/TaskTypeAndTitleAdmin.css
+++ b/src/Components/MenuElement/CompletedTasks/TaskTypeAndTitleAdmin.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 15px;
     margin-top: 20px;
+    z-index: 0;
 }
 
 .task-admin-tabs {
@@ -26,6 +27,13 @@
 .task-admin-tab.active {
     background: var(--accent);
     color: #fff;
+}
+
+.task-type-section,
+.task-title-section {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .task-type-table,
@@ -70,7 +78,6 @@
 .task-type-create,
 .task-title-create {
     display: flex;
-    flex-direction: column;
     gap: 10px;
 }
 
@@ -106,4 +113,30 @@
 .task-type-btn:hover,
 .task-title-btn:hover {
     background: var(--accent-light);
+}
+
+.task-type-x-btn,
+.task-title-x-btn {
+    background: var(--bg-3);
+    color: red;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 12px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-weight: 600;
+    transition: 0.2s;
+    width: min-content;
+    white-space: nowrap;
+}
+
+.task-type-x-btn:hover,
+.task-title-x-btn:hover{
+    background-color: #fff;
+}
+
+.close-update {
+    font-size: 1.3rem;
 }
