--- a/src/Components/MenuElement/AccountTypes.css
+++ b/src/Components/MenuElement/AccountTypes.css
@@ -35,6 +35,9 @@
     border-radius: 10px;
     padding: 10px 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    max-height: 750px;
+    overflow-y: auto;
 }
 
 .acc-table-head {
@@ -45,6 +48,8 @@
     background: var(--color-teal-11);
     border-bottom: 1px solid #e5e5e5;
     color: white;
+    position: sticky;
+    top: 0;
 }
 
 .acc-table-body .acc-row {
