--- a/src/Components/MenuElement/CompletedTasks/CreateTask.css
+++ b/src/Components/MenuElement/CompletedTasks/CreateTask.css
@@ -6,10 +6,11 @@
     justify-content: center;
     align-items: center;
     z-index: 9999999;
+    backdrop-filter: blur(4px);
 }
 
 .create-task-box {
-    width: 520px;
+    width: 35%;
     background: var(--color-teal-20);
     border-radius: 14px;
     box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
