--- a/src/Components/MenuElement/Statistika/OrderOpe.css
+++ b/src/Components/MenuElement/Statistika/OrderOpe.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000000;
+    z-index: 100000000;
 }
 
 .order-ope-modal {
@@ -43,11 +43,14 @@
 }
 
 .order-ope-multi-select {
-    max-height: 250px;
+    max-height: 450px;
     overflow-y: auto;
     border: 1px solid #ccc;
     padding: 8px;
     border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 .order-ope-multi-select label {
@@ -81,15 +84,16 @@
     cursor: pointer;
 }
 
-/* Selected ordered list */
 .order-ope-selected-list {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 6px;
     margin-bottom: 12px;
     border: 1px dashed #ccc;
     padding: 8px;
     border-radius: 6px;
+    max-height: 400px;
+    overflow-y: auto;
 }
 
 .order-ope-selected-item {
