--- a/src/Components/MenuElement/Accounts.css
+++ b/src/Components/MenuElement/Accounts.css
@@ -383,3 +383,11 @@ input[type="date"] {
 .clear-filters:hover {
     background: #dc2626;
 }
+
+
+.export-account-btn {
+    background-color: rgb(22, 181, 22);
+}
+.export-account-btn:hover {
+    background-color: green;
+}
