--- a/src/Components/MenuElement/CompletedTasks/CompletedTasks.css
+++ b/src/Components/MenuElement/CompletedTasks/CompletedTasks.css
@@ -155,6 +155,7 @@
     overflow: hidden;
     background: var(--bg-2);
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
+    position: relative;
 }
 
 .table-task-header,
@@ -171,6 +172,8 @@
     color: var(--text-1);
     font-weight: 600;
     border-bottom: 1px solid var(--accent);
+    position: sticky;
+    top: 0px;
 }
 
 .table-task-row {
