--- a/src/Components/MenuElement/CompletedTasks/TaskTypeAndTitleAdmin.css
+++ b/src/Components/MenuElement/CompletedTasks/TaskTypeAndTitleAdmin.css
@@ -41,9 +41,11 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    overflow: hidden;
+    overflow-y: auto;
     background: var(--bg-2);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    max-height: 750px;
+    position: relative;
 }
 
 .task-type-row,
@@ -60,6 +62,8 @@
     background: var(--bg-4);
     color: var(--text-1);
     font-weight: 600;
+    position: sticky;
+    top: 0px;
 }
 
 .task-type-actions svg,
