--- a/src/Components/MenuElement/Statistika/Order.css
+++ b/src/Components/MenuElement/Statistika/Order.css
@@ -35,6 +35,9 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    position: relative;
+    max-height: 750px;
+    overflow-y: auto;
 }
 
 .order-department > button,
@@ -71,6 +74,8 @@
     font-weight: 600;
     border-radius: 10px 10px 0 0;
     font-size: 0.8rem;
+    position: sticky;
+    top: 0px;
 }
 
 .order-dep-row,
