--- a/src/Components/MenuElement/ExcelExport/ExportModal.css
+++ b/src/Components/MenuElement/ExcelExport/ExportModal.css
@@ -8,8 +8,19 @@
   z-index: 999999999;
 }
 
+.export-overlay-content{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 60%;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  backdrop-filter: blur(8px);
+}
+
 .export-box {
-  width: 600px;
+  width: 100%;
   max-height: 80vh;
   background: #fff;
   border-radius: 14px;
@@ -24,7 +35,7 @@
 
 .checkbox-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   overflow-y: auto;
   padding-right: 5px;
@@ -33,7 +44,7 @@
 .checkbox-item {
   display: flex;
   gap: 8px;
-  font-size: 14px;
+  font-size: 18px;
   cursor: pointer;
 }
 
