--- a/src/Components/MenuElement/HistoryPanel/ActionCountPage.css
+++ b/src/Components/MenuElement/HistoryPanel/ActionCountPage.css
@@ -129,11 +129,16 @@
 
 .clear-btn {
     padding: 8px 15px;
-    background-color: var(--bg-3);
-    color: var(--text-2);
     border: none;
     border-radius: 8px;
+    background-color: rgb(255, 44, 44);
+    color: white;
+    transition: .4s;
     cursor: pointer;
+}
+
+.clear-btn:hover {
+    background-color: rgb(189, 29, 29);
 }
 
 .action-count-cards {
@@ -173,6 +178,42 @@
     margin: 0;
     font-size: 14px;
     color: var(--text-2);
+}
+
+.action-count-page {
+    display: flex;
+    flex-direction: column;
+}
+
+.by-account-type-wrapper {
+    width: 100%;
+    height: 450px !important;
+    margin: 0px !important;
+    border-radius: 0px 0px 10px 10px !important;
+}
+
+.row-box {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+}
+
+.by-account-type-wrapper canvas {
+    width: 100%;
+    height: 100%;
+}
+
+.wrap-box {
+    grid-column: 1 span;
+    height: 550px !important;
+}
+
+.wrap-box-head {
+    margin-top: 20px;
+    font-size: 20px;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 10px 10px 0 0;
 }
 
 @keyframes openFilter {
