--- a/src/reset.css
+++ b/src/reset.css
@@ -7,12 +7,18 @@
     font-family: 'Inter', sans-serif;
 }
 
-body{
+body {
     width: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
     background: var(--color-teal-20);
-    padding: 20px 10%;
+    padding: 20px 9%;
+}
+
+@media(max-width: 1600px) {
+    body {
+        padding: 20px 2%;
+    }
 }
 
 :root {
